Cleaner should handle retries of killed compaction attemps