@@ -100,7 +100,6 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 import java.util.Stack;
-import java.util.Arrays;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -256,10 +255,10 @@ public abstract class CompactorTest {
     rqst.setTxn_type(txnType);
     if (txnType == TxnType.REPL_CREATED) {
       rqst.setReplPolicy("default.*");
-      rqst.setReplSrcTxnIds(Arrays.asList(1L));
+      rqst.setReplSrcTxnIds(List.of(1L));
     }
     List<Long> txns = txnHandler.openTxns(rqst).getTxn_ids();
-    return txns.get(0);
+    return txns.getFirst();
   }
 
   protected long allocateWriteId(String dbName, String tblName, long txnid)
@@ -268,7 +267,7 @@ public abstract class CompactorTest {
             = new AllocateTableWriteIdsRequest(dbName, tblName);
     awiRqst.setTxnIds(Collections.singletonList(txnid));
     AllocateTableWriteIdsResponse awiResp = txnHandler.allocateTableWriteIds(awiRqst);
-    return awiResp.getTxnToWriteIds().get(0).getWriteId();
+    return awiResp.getTxnToWriteIds().getFirst().getWriteId();
   }
 
   protected void addDeltaFileWithTxnComponents(Table t, Partition p, int numRecords, boolean abort)
@@ -292,7 +291,7 @@ public abstract class CompactorTest {
             .setTableName(t.getTableName())
             .setIsTransactional(true);
     if (p != null) {
-      lockCompBuilder.setPartitionName(t.getPartitionKeys().get(0).getName() + "=" + p.getValues().get(0));
+      lockCompBuilder.setPartitionName(t.getPartitionKeys().getFirst().getName() + "=" + p.getValues().getFirst());
     }
     LockRequestBuilder requestBuilder = new LockRequestBuilder().setUser(null)
             .setTransactionId(txnId).addLockComponent(lockCompBuilder.build());
@@ -338,14 +337,14 @@ public abstract class CompactorTest {
   }
 
   protected List<Path> getDirectories(HiveConf conf, Table t, Partition p) throws Exception {
-    String partValue = (p == null) ? null : p.getValues().get(0);
+    String partValue = (p == null) ? null : p.getValues().getFirst();
     String location = getLocation(t.getTableName(), partValue);
     Path dir = new Path(location);
     FileSystem fs = FileSystem.get(conf);
     FileStatus[] stats = fs.listStatus(dir);
-    List<Path> paths = new ArrayList<Path>(stats.length);
-    for (int i = 0; i < stats.length; i++) {
-      paths.add(stats[i].getPath());
+    List<Path> paths = new ArrayList<>(stats.length);
+    for (FileStatus stat : stats) {
+      paths.add(stat.getPath());
     }
     return paths;
   }
@@ -394,13 +393,9 @@ public abstract class CompactorTest {
     }
   }
 
-  protected void stopThread() {
-    stop.set(true);
-  }
-
   private StorageDescriptor newStorageDescriptor(String location, List<Order> sortCols) {
     StorageDescriptor sd = new StorageDescriptor();
-    List<FieldSchema> cols = new ArrayList<FieldSchema>(2);
+    List<FieldSchema> cols = new ArrayList<>(2);
     cols.add(new FieldSchema("a", "varchar(25)", "still no comment"));
     cols.add(new FieldSchema("b", "int", "comment"));
     sd.setCols(cols);
@@ -411,7 +406,7 @@ public abstract class CompactorTest {
     SerDeInfo serde = new SerDeInfo();
     serde.setSerializationLib(LazySimpleSerDe.class.getName());
     sd.setSerdeInfo(serde);
-    List<String> bucketCols = new ArrayList<String>(1);
+    List<String> bucketCols = new ArrayList<>(1);
     bucketCols.add("a");
     sd.setBucketCols(bucketCols);
 
@@ -424,13 +419,14 @@ public abstract class CompactorTest {
   // I can't do this with @Before because I want to be able to control when the thread starts
   private void runOneLoopOfCompactorThread(CompactorThreadType type) throws Exception {
     TestTxnDbUtil.setConfValues(conf);
-    CompactorThread t;
-    switch (type) {
-      case INITIATOR: t = new Initiator(); break;
-      case WORKER: t = new Worker(); break;
-      case CLEANER: t = new Cleaner(); break;
-      default: throw new RuntimeException("Huh? Unknown thread type.");
-    }
+    CompactorThread t = switch (type) {
+      case INITIATOR ->
+          new Initiator();
+      case WORKER ->
+          new Worker();
+      case CLEANER ->
+          new Cleaner();
+    };
     t.setConf(conf);
     stop.set(true);
     t.init(stop);
@@ -454,7 +450,7 @@ public abstract class CompactorTest {
 
   private void addFile(Table t, Partition p, long minTxn, long maxTxn, int numRecords, FileType type, int numBuckets,
       boolean allBucketsPresent, long visibilityId) throws Exception {
-    String partValue = (p == null) ? null : p.getValues().get(0);
+    String partValue = (p == null) ? null : p.getValues().getFirst();
     Path location = new Path(getLocation(t.getTableName(), partValue));
     String filename = null;
     switch (type) {
@@ -469,7 +465,7 @@ public abstract class CompactorTest {
       if (bucket == 0 && !allBucketsPresent) {
         continue; // skip one
       }
-      Path partFile = null;
+      Path partFile;
       if (type == FileType.LEGACY) {
         partFile = new Path(location, String.format(AcidUtils.LEGACY_FILE_BUCKET_DIGITS, bucket) + "_0");
       } else {
@@ -477,7 +473,7 @@ public abstract class CompactorTest {
         fs.mkdirs(dir);
         partFile = AcidUtils.createBucketFile(dir, bucket);
         if (type == FileType.LENGTH_FILE) {
-          partFile = new Path(partFile.toString() + AcidUtils.DELTA_SIDE_FILE_SUFFIX);
+          partFile = new Path(partFile + AcidUtils.DELTA_SIDE_FILE_SUFFIX);
         }
       }
       FSDataOutputStream out = fs.create(partFile);
@@ -497,9 +493,7 @@ public abstract class CompactorTest {
   static class MockInputFormat implements AcidInputFormat<WritableComparable,Text> {
 
     @Override
-    public AcidInputFormat.RowReader<Text> getReader(InputSplit split,
-                                                          Options options) throws
-        IOException {
+    public AcidInputFormat.RowReader<Text> getReader(InputSplit split, Options options) {
       return null;
     }
 
@@ -508,7 +502,7 @@ public abstract class CompactorTest {
                                         ValidWriteIdList validWriteIdList,
                                         Path baseDirectory, Path[] deltaDirectory, Map<String, Integer> deltaToAttemptId) throws IOException {
 
-      List<Path> filesToRead = new ArrayList<Path>();
+      List<Path> filesToRead = new ArrayList<>();
       if (baseDirectory != null) {
         if (baseDirectory.getName().startsWith(AcidUtils.BASE_PREFIX)) {
           Path p = AcidUtils.createBucketFile(baseDirectory, bucket);
@@ -521,8 +515,8 @@ public abstract class CompactorTest {
 
         }
       }
-      for (int i = 0; i < deltaDirectory.length; i++) {
-        Path p = AcidUtils.createBucketFile(deltaDirectory[i], bucket);
+      for (Path path : deltaDirectory) {
+        Path p = AcidUtils.createBucketFile(path, bucket);
         FileSystem fs = p.getFileSystem(conf);
         if (fs.exists(p)) {
           filesToRead.add(p);
@@ -543,25 +537,22 @@ public abstract class CompactorTest {
     }
 
     @Override
-    public boolean validateInput(FileSystem fs, HiveConf conf, List<FileStatus> files) throws
-        IOException {
+    public boolean validateInput(FileSystem fs, HiveConf conf, List<FileStatus> files) {
       return false;
     }
   }
 
   static class MockRawReader implements AcidInputFormat.RawReader<Text> {
     private final Stack<Path> filesToRead;
-    private final Configuration conf;
     private FSDataInputStream is = null;
     private final FileSystem fs;
     private boolean lastWasDelete = true;
 
     MockRawReader(Configuration conf, List<Path> files) throws IOException {
-      filesToRead = new Stack<Path>();
+      filesToRead = new Stack<>();
       for (Path file : files) {
         filesToRead.push(file);
       }
-      this.conf = conf;
       fs = FileSystem.get(conf);
     }
 
@@ -599,7 +590,7 @@ public abstract class CompactorTest {
       try {
         identifier.readFields(is);
         line = is.readLine();
-      } catch (EOFException e) {
+      } catch (EOFException ignored) {
       }
       if (line == null) {
         // Set our current entry to null (since it's done) and try again.
@@ -642,8 +633,7 @@ public abstract class CompactorTest {
   static class MockOutputFormat implements AcidOutputFormat<WritableComparable, Text> {
 
     @Override
-    public RecordUpdater getRecordUpdater(Path path, Options options) throws
-        IOException {
+    public RecordUpdater getRecordUpdater(Path path, Options options) {
       return null;
     }
 
@@ -656,7 +646,7 @@ public abstract class CompactorTest {
     public org.apache.hadoop.hive.ql.exec.FileSinkOperator.RecordWriter getHiveRecordWriter(JobConf jc, Path finalOutPath,
                                               Class<? extends Writable> valueClass,
                                               boolean isCompressed, Properties tableProperties,
-                                              Progressable progress) throws IOException {
+                                              Progressable progress) {
       return null;
     }
 
@@ -729,6 +719,10 @@ public abstract class CompactorTest {
   }
 
   protected long compactInTxn(CompactionRequest rqst) throws Exception {
+    return compactInTxn(rqst, CommitAction.COMMIT);
+  }
+
+  long compactInTxn(CompactionRequest rqst, CommitAction commitAction) throws Exception {
     txnHandler.compact(rqst);
     FindNextCompactRequest findNextCompactRequest = new FindNextCompactRequest();
     findNextCompactRequest.setWorkerId("fred");
@@ -740,20 +734,34 @@ public abstract class CompactorTest {
     ValidTxnList validTxnList = TxnCommonUtils.createValidReadTxnList(txnHandler.getOpenTxns(), compactorTxnId);
     GetValidWriteIdsRequest writeIdsRequest = new GetValidWriteIdsRequest();
     writeIdsRequest.setValidTxnList(validTxnList.writeToString());
-    writeIdsRequest
-        .setFullTableNames(Collections.singletonList(TxnUtils.getFullTableName(rqst.getDbname(), rqst.getTablename())));
+    writeIdsRequest.setFullTableNames(
+        Collections.singletonList(TxnUtils.getFullTableName(rqst.getDbname(), rqst.getTablename())));
     // with this ValidWriteIdList is capped at whatever HWM validTxnList has
-    ValidCompactorWriteIdList tblValidWriteIds = TxnUtils
-        .createValidCompactWriteIdList(txnHandler.getValidWriteIds(writeIdsRequest).getTblValidWriteIds().get(0));
+    ValidCompactorWriteIdList tblValidWriteIds = TxnUtils.createValidCompactWriteIdList(
+        txnHandler.getValidWriteIds(writeIdsRequest).getTblValidWriteIds().getFirst());
 
     ci.highestWriteId = tblValidWriteIds.getHighWatermark();
     txnHandler.updateCompactorState(ci, compactorTxnId);
-    txnHandler.markCompacted(ci);
-    txnHandler.commitTxn(new CommitTxnRequest(compactorTxnId));
-    Thread.sleep(MetastoreConf.getTimeVar(conf, MetastoreConf.ConfVars.TXN_OPENTXN_TIMEOUT, TimeUnit.MILLISECONDS));
+
+    switch (commitAction) {
+      case COMMIT -> {
+        txnHandler.markCompacted(ci);
+        txnHandler.commitTxn(new CommitTxnRequest(compactorTxnId));
+
+        Thread.sleep(MetastoreConf.getTimeVar(
+            conf, MetastoreConf.ConfVars.TXN_OPENTXN_TIMEOUT, TimeUnit.MILLISECONDS));
+      }
+      case ABORT ->
+          txnHandler.abortTxn(new AbortTxnRequest(compactorTxnId));
+    }
     return compactorTxnId;
   }
 
+  enum CommitAction {
+    COMMIT,
+    ABORT,
+    NONE
+  }
 
   protected static Map<String, Integer> gaugeToMap(String metric) throws Exception {
     MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
